# ml-project-template

./: README.md
package/: Makefile  README.md  pyproject.toml  requirements.txt
package/package/: __init__.py  config.py  dataset.py  features.py  plots.py
package/package/modeling/: predict.py  train.py
